--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,15 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+
+//colors
+$colorWhite: #fff;
+$colorText: #2C2C2C;
+$colorDark: #1d2f41;
+$colorRed: #d50000;
+$colorGreen: #119c01;
+$colorGray: #9B9B9A;
+$colorLight: #dde1e6;
+$colorTurquoise: #31ACB8;
+$colorTurquoiseHover: #4cb9c3;
+$colorTurquoiseLight: #EAF7F8;
